[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyftp"
requires-python = ">= 3.7"
version = "0.0.1"
dependencies = [
    "prompt_toolkit"
]

[tool.pylsp-mypy]
enabled = true
python_version = "3.12.1"
strict = true
live-mode = true

[tool.ruff]
line-length = 80
target-version = "py312"
